--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -6,3 +6,7 @@
     --black: #000000;
     --accent-color: #ffccbb;
   }
+
+  .unstyled-link {
+    text-decoration: underline;
+    color: var(--black);}
