Overhaul with new images and Robinson house page

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,10 +1,10 @@
 :root {
     /* --dark-purple: #893052; maroon */
     /* --dark-purple: #be93d4; periwinkle */
-    --dark-purple: #d1a0ff;
+    --dark-purple: #e1c1ff;
     /* --dark-purple: #6f2dbd; original */
     /* --medium-purple: #c9227e; */
-    --medium-purple: #e6baff;
+    --medium-purple: #efd3ff;
     --light-purple: #f2ebff;
     --light-yellow: #fffff4;
     --light-orange: #fff0e4;
